# kung-fu-pipelines

./: .gitignore  .travis.yml  README.md  gcp_service_account.json  pyproject.toml
docs/source/: conf.py  index.rst  sphinx-requirements.txt
kfp_workflows/: cli.py  cli_test.py  workflow.py  workflow_test.py
kungfupipelines/: __init__.py  cli.py  compiler.py  kfp_test.py  step.py  step_test.py  workflow.py  workflow_test.py
kungfupipelines/overrides/: __init__.py  _metadata.py  _pipeline.py  compiler.py
samples/: artifact-passing.yaml  artifact_passing.py  sample_step.py
source/: conf.py  index.rst
tests/: inspect.py
