[tool.poetry]
name = "kfp-workflows"
version = "0.1.0"
description = "Kubeflow pipelines made easy."
authors = ["Saad Khan <skhan8@mail.einstein.yu.edu>"]
packages = [
    { include = "kfp_workflows" }
]
exclude = ["*_test.py"]

[tool.poetry.dependencies]
python = "^3.6"
kfp = "^0.1.36"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"